--- a/App/ClientApp/src/app/layout/users/list/list.component.html
+++ b/App/ClientApp/src/app/layout/users/list/list.component.html
@@ -5,7 +5,7 @@
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust" (click)="navigateToAddUser()" id="btnAddUsers" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Create' }))">
+      <button class="btn-add btn-cust" title="Add User" (click)="navigateToAddUser()" id="btnAddUsers" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Create' }))">
         <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> User
       </button>
       <!--<button class="btn-add btn-cust" id="btnAddUsers" routerLink="Add">
@@ -34,7 +34,7 @@
               <!--<img class="user-img" src="assets/images/user.png">-->
 
               <!--for letter image-->
-              <span class="user-img-ltr"><span>{{element.FirstName.charAt(0)}}</span><span>{{element.LastName.charAt(0)}}</span></span>
+              <span class="user-img-ltr"><span>{{element.FirstName.charAt(0) | titlecase}}</span><span>{{element.LastName.charAt(0) | titlecase}}</span></span>
               <span class="user-name"> {{element.FirstName}} {{element.LastName}}</span>
             </td>
           </ng-container>
@@ -60,8 +60,8 @@
           <ng-container matColumnDef="active">
             <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Active </th>
             <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.IsActive" class="fa fa-toggle-on text-success font20" title="{{element.IsActive}}"></span>
-              <span *ngIf="!element.IsActive" class="fa fa-toggle-off text-success font20" title="{{element.IsActive}}"></span>
+              <span *ngIf="element.IsActive">YES</span>
+              <span *ngIf="!element.IsActive">NO</span>
 
             </td>
           </ng-container>
@@ -69,8 +69,8 @@
           <ng-container matColumnDef="lock">
             <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Lock </th>
             <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.IsLocked" class="fa fa-toggle-on text-secondary font20" title="{{element.IsLocked}}"></span>
-              <span *ngIf="!element.IsLocked" class="fa fa-toggle-off text-secondary font20" title="{{element.IsLocked}}"></span>
+              <span *ngIf="element.IsLocked">YES</span>
+              <span *ngIf="!element.IsLocked">NO</span>
 
             </td>
           </ng-container>
