validation added for confirm user password screen and other minor changes.

--- a/App/ClientApp/src/app/confirm-user/confirm-user.component.html
+++ b/App/ClientApp/src/app/confirm-user/confirm-user.component.html
@@ -50,9 +50,9 @@
         <div class="row mb-2">
           <div class="col-sm-12 mt-3">
             <button type="button" class="btn btn-default btn-block" (click)="onSubmit()">Submit</button>
-            <div class="validation-msg text-center" style="color:red">
+            <!-- <div class="validation-msg text-center" style="color:red">
               <label>{{status}}</label>
-            </div>
+            </div> -->
           </div>
          
           <div class="col-sm-12 mt-3 text-center">
