--- a/App/ClientApp/src/app/login/login.component.html
+++ b/App/ClientApp/src/app/login/login.component.html
@@ -52,11 +52,11 @@
           </div>
         </div>
 
-        <div class="row mb-3" *ngIf='errorMsg'>
+        <!-- <div class="row mb-3" *ngIf='errorMsg'>
           <div class="col-sm-12 text-center">
             <p class="text-danger">{{loginErrorMsg}}</p>
           </div>>
-        </div>
+        </div> -->
       </div>
 
       <!--forgot password-->
