--- a/App/ClientApp/src/app/login/login.component.html
+++ b/App/ClientApp/src/app/login/login.component.html
@@ -22,6 +22,13 @@
             <div class="login-control">
               <span class="fa fa-user"></span>
               <input type="text" class="txtLogin" placeholder="User name" autocomplete="off" formControlName="userName">
+              <div class="validation-msg" style="color:red">
+                <ul *ngIf="loginFormErrorObject.showUserNameError" style="list-style-type:none">
+                    <li class="text-danger" *ngIf="userName.errors?.pattern">Invalid email id</li>
+                    <li class="text-danger" *ngIf="userName.errors?.required">Email id field required</li>
+
+                </ul>
+            </div>
             </div>
           </div>
         </div>
@@ -30,6 +37,12 @@
             <div class="login-control">
               <span class="fa fa-lock"></span>
               <input type="password" class="txtLogin" placeholder="Password" autocomplete="off" formControlName="password">
+              <div class="validation-msg" style="color:red">
+                <ul *ngIf="loginFormErrorObject.showPasswordError" style="list-style-type:none">
+                    <li class="text-danger" *ngIf="password.errors?.required">Password field required</li>
+
+                </ul>
+            </div>
             </div>
           </div>
         </div>
