--- a/App/ClientApp/src/app/layout/change-password/change-password.component.html
+++ b/App/ClientApp/src/app/layout/change-password/change-password.component.html
@@ -10,9 +10,9 @@
           <div class="col-sm-4">
             <label for="inputOldPassword" id="lblOldPassword">Old Password</label>
             <div class="input-group">
-              <input type="password" formControlName="oldPassword" class="form-control" aria-describedby="basic-addon2" id="inputOldPassword">
+              <input [type]="hide ? 'password' : 'text'" formControlName="oldPassword" class="form-control" aria-describedby="basic-addon2" id="inputOldPassword">
               <div class="input-group-append">
-                <button class="btn input-group-text fa fa-eye" type="button"></button>
+                <button (click)="showPassword()" class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
             </div>
             <div class="validation-msg" style="color:red">
@@ -28,9 +28,9 @@
           <div class="col-sm-4">
             <label for="inputNewPassword" id="lblNewPassword">New Password</label>
             <div class="input-group">
-              <input type="password" formControlName="newPassword" class="form-control" aria-describedby="basic-addon2" id="inputNewPassword" minlength="8">
+              <input [type]="hideNewPwd ? 'password' : 'text'" formControlName="newPassword" class="form-control" aria-describedby="basic-addon2" id="inputNewPassword" minlength="8">
               <div class="input-group-append">
-                <button class="btn input-group-text fa fa-eye" type="button"></button>
+                <button (click)="hideNewPwd = !hideNewPwd" class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
             </div>
             <div class="validation-msg" style="color:red">
@@ -50,16 +50,16 @@
           <div class="col-sm-4">
             <label for="inputConfirmPassword" id="lblConfirmPassword">Confirm New Password</label>
             <div class="input-group">
-              <input type="password" formControlName="confirmpassword" class="form-control" aria-describedby="basic-addon2" id="inputConfirmPassword">
+              <input [type]="hideConfirmPwd ? 'password' : 'text'" formControlName="confirmpassword" class="form-control" aria-describedby="basic-addon2" id="inputConfirmPassword">
               <div class="input-group-append">
-                <button class="btn input-group-text fa fa-eye" type="button"></button>
+                <button (click)="hideConfirmPwd = !hideConfirmPwd" class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
             </div>
             <div class="validation-msg" style="color:red">
               <ng-container *ngFor="let error of error_messages.confirmpassword">
                 <div class="text-danger" *ngIf="changePasswordForm.get('confirmpassword').hasError(error.type) && (changePasswordForm.get('confirmpassword').dirty || changePasswordForm.get('confirmpassword').touched)">
                   {{ error.message }}
-                </div>                
+                </div>
               </ng-container>
               <div class="text-danger" *ngIf="changePasswordForm.errors != null && changePasswordForm.errors.confirmPwdErr != null">
                 New Password and Confirm Password must be match.
