--- a/App/ClientApp/src/app/confirm-user/confirm-user.component.html
+++ b/App/ClientApp/src/app/confirm-user/confirm-user.component.html
@@ -17,7 +17,7 @@
             <p class="m-0" style="font-weight:normal"> Please reset your password to login to the system </p>
           </div>
           <div class="mb-4">
-         
+
           </div>
         </div>
         <div class="row mb-3">
@@ -26,9 +26,9 @@
               <div class="input-group-prepend">
                 <span class="input-group-text"><span class="fa fa-lock"></span></span>
               </div>
-              <input type="password" class="form-control" placeholder="New Password" [(ngModel)]="newPassword" id="newPassword">
+              <input [type]="hideNewPwd ? 'password' : 'text'" class="form-control" placeholder="New Password" [(ngModel)]="newPassword" id="newPassword">
               <div class="input-group-append">
-                <button class="btn input-group-text fa fa-eye" type="button"></button>
+                <button (click)="hideNewPwd = !hideNewPwd" class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
             </div>
           </div>
@@ -39,14 +39,14 @@
               <div class="input-group-prepend">
                 <span class="input-group-text"><span class="fa fa-lock"></span></span>
               </div>
-              <input type="password" class="form-control" placeholder="Re-enter Password" [(ngModel)]="confirmPassword" id="confirmPassword">
+              <input [type]="hideConfirmPwd ? 'password' : 'text'" class="form-control" placeholder="Re-enter Password" [(ngModel)]="confirmPassword" id="confirmPassword">
               <div class="input-group-append">
-                <button class="btn input-group-text fa fa-eye" type="button"></button>
+                <button (click)="hideConfirmPwd = !hideConfirmPwd" class="btn input-group-text fa fa-eye" type="button"></button>
               </div>
             </div>
           </div>
         </div>
-       
+
         <div class="row mb-2">
           <div class="col-sm-12 mt-3">
             <button type="button" class="btn btn-default btn-block" (click)="onSubmit()">Submit</button>
@@ -54,12 +54,12 @@
               <label>{{status}}</label>
             </div> -->
           </div>
-         
+
           <div class="col-sm-12 mt-3 text-center">
             <a ui-sref="login" (click)="onCancel()">Back</a>
           </div>
         </div>
-        
+
       </div>
 
     </div>
