--- a/App/ClientApp/src/app/layout/users/list/list.component.html
+++ b/App/ClientApp/src/app/layout/users/list/list.component.html
@@ -31,10 +31,11 @@
             <td mat-cell *matCellDef="let element">
 
               <!--for jpg png etc-->
-              <!--<img class="user-img" src="assets/images/user.png">-->
-
+              <div *ngIf="element.Image!='' && element.Image!=null">
+                <img class="user-img" [src]="element.Image">
+              </div>
               <!--for letter image-->
-              <span class="user-img-ltr"><span>{{element.FirstName.charAt(0) | titlecase}}</span><span>{{element.LastName.charAt(0) | titlecase}}</span></span>
+              <div *ngIf="element.Image=='' || element.Image==null"><span class="user-img-ltr"><span>{{element.FirstName.charAt(0) | titlecase}}</span><span>{{element.LastName.charAt(0) | titlecase}}</span></span></div>
               <span class="user-name"> {{element.FirstName}} {{element.LastName}}</span>
             </td>
           </ng-container>
@@ -50,7 +51,6 @@
             <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Mobile No. </th>
             <td mat-cell *matCellDef="let element"> {{element.ContactNumber}} </td>
           </ng-container>
-
           <!-- Symbol Column -->
           <ng-container matColumnDef="role">
             <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
@@ -60,8 +60,8 @@
           <ng-container matColumnDef="active">
             <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Active </th>
             <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.IsActive">YES</span>
-              <span *ngIf="!element.IsActive">NO</span>
+              <span *ngIf="element.IsActive">Yes</span>
+              <span *ngIf="!element.IsActive">No</span>
 
             </td>
           </ng-container>
@@ -69,8 +69,8 @@
           <ng-container matColumnDef="lock">
             <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef> Lock </th>
             <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.IsLocked">YES</span>
-              <span *ngIf="!element.IsLocked">NO</span>
+              <span *ngIf="element.IsLocked">Yes</span>
+              <span *ngIf="!element.IsLocked">No</span>
 
             </td>
           </ng-container>
@@ -82,7 +82,9 @@
                 <button type="button" title="View" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'View' }))" (click)="viewUser(element)" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
                 <button type="button" [disabled]="!element.IsActive" title="Update" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Edit' }))" (click)="editUser(element)" id="btnUpdate"><span class="fa fa-pencil-square-o"></span></button>
                 <!--<button type="button" title="Delete" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Delete' }))" (click)="deleteUser(element)" id="btnDelete" data-toggle="modal" data-target="#confirmModal"><span class="fa fa-trash-o"></span></button>-->
-                <button type="button" (click)="unLockUser(element)" title="Lock User"><span class="fa fa-unlock-alt"></span></button>
+                <button type="button" (click)="unLockUser(element)" *ngIf="element.IsLocked" title="Unlock User"><span class="fa fa-lock"></span></button>
+                <button type="button" (click)="unLockUser(element)" *ngIf="!element.IsLocked" title="Lock User"><span class="fa fa-unlock-alt"></span></button>
+
                 <button type="button" (click)="activeDeactiveUser(element)" title="Deactivate User" *ngIf="element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Edit' }))"><span class="fa fa-toggle-on text-success"></span></button>
                 <button type="button" (click)="activeDeactiveUser(element)" title="Activate User" *ngIf="!element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'User',Operation: 'Edit' }))"><span class="fa fa-toggle-off text-success"></span></button>
 
