--- a/App/ClientApp/src/app/layout/roles/list/list.component.html
+++ b/App/ClientApp/src/app/layout/roles/list/list.component.html
@@ -47,11 +47,11 @@
           <th class="width20 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
           <td mat-cell *matCellDef="let role">
             <div class="action-btns btn-tbl-action">
-              <button type="button" id="btnViewRole" (click)="navigateToRoleView(role)"
+              <button type="button" id="btnViewRole" title="View Role" (click)="navigateToRoleView(role)"
                       *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'View' }))">
                   <span class="fa fa-file-text-o"></span>
               </button>
-              <button type="button" id="btnUpdateRole" (click)="navigateToRoleEdit(role)"
+              <button type="button" id="btnUpdateRole" title="Update Role" (click)="navigateToRoleEdit(role)"
                       *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' }))">
                   <span class="fa fa-pencil-square-o"></span>
               </button>
@@ -59,11 +59,11 @@
                       *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Delete' }))" >
                   <span class="fa fa-trash-o"></span>
               </button> -->
-              <button type="button" title="Deactivate User" (click)="DeactivateRole(role)"
+              <button type="button" title="Deactivate Role" (click)="DeactivateRole(role)"
                 *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
                 <span class="fa fa-toggle-on text-success"></span>
               </button>
-              <button type="button" title="Activate User" (click)="ActivateRole(role)"
+              <button type="button" title="Activate Role" (click)="ActivateRole(role)"
                 *ngIf="((!role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
                 <span class="fa fa-toggle-off text-success"></span>
               </button>
