--- a/App/ClientApp/src/app/layout/asset-libraries/list-asset-library/list-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/list-asset-library/list-asset-library.component.html
@@ -5,10 +5,10 @@
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust" id="btnAddUsers" routerLink="Add">
+      <button class="btn-add btn-cust" id="btnAddUsers" (click)="navigateToAssetLibraryAdd()"
+              *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Create' }))">
         <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Asset Library
       </button>
-
     </div>
   </div>
   <!--desktop view start-->
@@ -21,34 +21,47 @@
           </mat-paginator>
         </div>
       </div>
-      <div class="widget-area-grid padding-0"> 
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust">
-        <!-- Position Column -->
-        <ng-container matColumnDef="name">
-          <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-          <td mat-cell *matCellDef="let element">{{element.name}}</td>
-        </ng-container>
+      <div class="widget-area-grid padding-0">
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th class="width40 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let element">{{element.Name}}</td>
+          </ng-container>
 
-        <ng-container matColumnDef="description">
-          <th class="width48 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-          <td mat-cell *matCellDef="let element">{{element.description}} </td>
-        </ng-container>
+          <ng-container matColumnDef="description">
+            <th class="width48 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+            <td mat-cell *matCellDef="let element">{{element.Description}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="actions">
-          <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="action-btns btn-tbl-action">
-              <button type="button" title="View" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
-              <button type="button" title="Update" id="btnUpdate"><span class="fa fa-pencil-square-o"></span></button>
-              <button type="button" title="Delete" id="btnDelete"><span class="fa fa-trash-o"></span></button>
-            </div>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="actions">
+            <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let element">
+              <div class="action-btns btn-tbl-action">
+                <button type="button" title="View" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
+                <button type="button" title="Update" id="btnUpdate"><span class="fa fa-pencil-square-o"></span></button>
+                <button type="button" title="Delete" id="btnDelete"><span class="fa fa-trash-o"></span></button>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-        </div>
+                <button type="button" id="btnViewRole" title="View Asset Library" (click)="navigateToAssetLibraryView(element)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'View' }))">
+                  <span class="fa fa-file-text-o"></span>
+                </button>
+                <button type="button" id="btnUpdateRole" title="Update Asset Library" (click)="navigateToAssetLibraryEdit(element)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">
+                  <span class="fa fa-pencil-square-o"></span>
+                </button>
+                <button type="button" id="btnDeleteRole" (click)="deleteAssetLibrary(element)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))">
+                  <span class="fa fa-trash-o"></span>
+                </button>
+              </div>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
     </div>
   </div>
   <!--desktop view end-->
