role module issues resolved and other minor changes in UI

--- a/App/ClientApp/src/app/layout/sourcedata/sourcedata.component.html
+++ b/App/ClientApp/src/app/layout/sourcedata/sourcedata.component.html
@@ -82,7 +82,7 @@
       <div class="form-group">
         <label>Start Date</label>
         <div class="position-relative">
-          <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filtershiftfromdate">
+          <input [owlDateTime]="dt" class="form-control" id="inputFromDate" >
           <span [owlDateTimeTrigger]="dt" class="datetime-icon">
             <i class="fa fa-calendar"></i>
           </span>
@@ -92,7 +92,7 @@
       <div class="form-group">
         <label>End Date</label>
         <div class="position-relative">
-          <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filtershiftenddate">
+          <input [owlDateTime]="dt1" class="form-control" id="inputToDate" >
           <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
             <i class="fa fa-calendar"></i>
           </span>
