--- a/App/ClientApp/src/app/layout/roles/list/list.component.html
+++ b/App/ClientApp/src/app/layout/roles/list/list.component.html
@@ -51,8 +51,8 @@
                       *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'View' }))">
                   <span class="fa fa-file-text-o"></span>
               </button>
-              <button type="button" id="btnUpdateRole" title="Update Role" (click)="navigateToRoleEdit(role)"
-                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' }))">
+              <button type="button" id="btnUpdateRole" title="Update Role" (click)="navigateToRoleEdit(role)" 
+                  *ngIf="((role.IsActive && (userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' })))">
                   <span class="fa fa-pencil-square-o"></span>
               </button>
               <!-- <button type="button" id="btnDeleteRole" (click)="deleteRole(role)"
