--- a/App/ClientApp/src/app/layout/roles/view/view.component.html
+++ b/App/ClientApp/src/app/layout/roles/view/view.component.html
@@ -21,13 +21,13 @@
         <div class="row form-group">
           <div class="col-md-4 col-lg-3">
             <label id="lblRoleName" for="inputRoleName">Name</label>
-         <div>{{RoleName}}</div>
+         <div>{{roleRecord.Name}}</div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-8 col-lg-6">
             <label id="lblDescription">Description</label>
-            <div>{{RoleDesc}}</div>
+            <div>{{roleRecord.Description}}</div>
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
     </div>
     <div class="card border-0 mt-4 mb-3 bg-transparent">
       <div class="card-body p-0">
-        <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToRoleEdit()">Update</button>
+        <button class="btn-footer-fill mr-2" id="btnSave" *ngIf="roleRecord.IsActive" (click)="navigateToRoleEdit()">Update</button>
         <!-- <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="deleteRole()">Delete</button> -->
         <button class="btn-footer-outline" id="btnCancel" (click)="navigateToRoleList()">Cancel</button>
       </div>
