--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -78,4 +78,6 @@
 
 <div class="content-wapper" [ngClass]="collapse_class">
   <router-outlet></router-outlet>
+  <div class="ftr-vrsn">v.1.0.1.1</div>
 </div>
+
