--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -1,5 +1,17 @@
 
 .site {
+  .ftr-vrsn {
+    position: fixed;
+    bottom: 0;
+    right: 5px;
+    background: #f5f5f5;
+    width: 100%;
+    text-align: right;
+    border-top: solid thin #e1e1e1;
+    height: 25px;
+    line-height: 25px;
+  }
+
   td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type {
     padding-left: 10px;
   }
@@ -334,8 +346,9 @@
 
   .main-container, .main-container-machine {
     width: 100%;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 75px);
     margin-top: 50px;
+    margin-bottom: 25px;
   }
 
   .main-container-machine {
@@ -470,10 +483,10 @@
   }
 
   .mat-tooltip {
-   background:#f5f5f5;
-   color:#000;
-   border:solid thin #e1e1e1;
-   font-size:14px;
+    background: #f5f5f5;
+    color: #000;
+    border: solid thin #e1e1e1;
+    font-size: 14px;
   }
 
   .user-img-ltr {
