--- a/App/ClientApp/src/app/layout/users/add/add-edit.component.html
+++ b/App/ClientApp/src/app/layout/users/add/add-edit.component.html
@@ -92,7 +92,7 @@
             <div class="row">
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label for="inputEmail">Email Id</label><span class="text-danger ml-2">*</span>
-                <input type="email" class="form-control" id="inputEmail" formControlName="email">
+                <input type="email" class="form-control" [attr.readonly]= "userEditModeOn" id="inputEmail" formControlName="email">
                 <div class="validation-msg" style="color:red" *ngIf="email.touched && email.errors">
                   <ul style="list-style-type:none">
                     <li class="text-danger" *ngIf="email.errors?.pattern">
